Finishes 'Proposed technical architecture' introduction.

--- a/literature.bib
+++ b/literature.bib
@@ -111,3 +111,10 @@
 	author = {Simperl, E. and Norton, B. and Maleshkova, M. and Domingue, J. and Mikroyannidis, A. and Mulholland, P. and Power, R.},
 	year = {2013}
 }
+
+@misc{_open_????,
+	title = {The {Open} {Definition} - {Open} {Definition} - {Defining} {Open} in {Open} {Data}, {Open} {Content} and {Open} {Knowledge}},
+	url = {http://opendefinition.org/},
+	urldate = {2016-03-27},
+	file = {The Open Definition - Open Definition - Defining Open in Open Data, Open Content and Open Knowledge:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/KTAHZMFF/opendefinition.org.html:text/html}
+}
