--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -168,7 +168,7 @@ Linked~Education represents the idea of using Linked~Data principles for educati
 
 \section{Benefits and challenges of using Linked Open Data at universities}
 \label{lod-benefits-challenges}
-As mentioned in the introduction, we identified \textit{students}, \textit{researchers} and \textit{administration employees} as import stakeholders at a university. This chapter describes the methodology and results of the conducted case study, where \textit{students} and persons affiliated with \textit{student affairs} at the Vienna University of Technology were the case. The essential question of the case study was RQ2; what are the major benefits and challenges for students if certain university resources are published as Linked Open Data and which needful use cases can result out of this from the perspective of the students. RQ3 played a minor role in the case study, because \textit{students} are in general on the consuming side of information technology at a university. However, there are \textit{students} that are operating information systems (e.g. wikis or internet forums), which collect a not insignificant amount of knowledge, which is why this research question was also of interest. The case study was conducted at the Vienna University of Technology, where teaching and research is focused on engineering and natural science.  It has several faculties including Computer Sciences and Electrical Engineering \& Information Technology, which is exactly why the exploration of the willingness of students to develop applications based on LOD was also a goal. \textbf{5} participants from student representatives, teaching \& administration personnel to ordinary students participated in the case study.
+As mentioned in the introduction, we identified \textit{students}, \textit{researchers} and \textit{administration employees} as import stakeholders at a university. This chapter describes the methodology and results of the conducted case study, where \textit{students} and persons affiliated with \textit{student affairs} at the Vienna University of Technology were the case. The essential question of the case study was RQ2; what are the major benefits and challenges for students if certain university resources are published as Linked Open Data and which needful use cases can result out of this from the perspective of the students. RQ3 played a minor role in the case study, because \textit{students} are in general on the consuming side of information technology at a university. However, there are \textit{students} who are operating information systems (e.g. wikis or internet forums), which collect a not insignificant amount of knowledge, which is why this research question was also of interest. The case study was conducted at the Vienna University of Technology, where teaching and research is focused on engineering and natural science.  It has several faculties including Computer Sciences and Electrical Engineering \& Information Technology, which is exactly why the exploration of the willingness of students to develop applications based on LOD was also a goal. \textbf{5} participants from student representatives, teaching \& administration personnel to ordinary students participated in the case study.
 
 A case study concerning \textit{researchers} was conducted by Lukas Baronyai \cite{baronyai_publishing_2016} and another one concerning \textit{administration employees} by Stefan Gamerith \cite{gamerith_linked_2016}. 
 
@@ -252,9 +252,9 @@ At the beginning of the interviews, the five participants had to answer some que
 The facilities of the Vienna University of Technology are spread over a wide area (mostly in the fourth district of Vienna) and especially, when you are new to the campus regardless of whether you are a student, an employee or a visitor, a map application that
 shows the location of places of interest and make it possible to search them may save some time and reduce annoyance. Not only to find them in the first place, but also for finding free learning or computer rooms as well as for the social life beyond the university; finding cafés or restaurants that are nearby.
 
-The University of Southampton has developed a map application\footnote{\url{http://maps.southampton.ac.uk/}} based on their Linked Open Data initiative (see figure \ref{fig:ush-map-app}). This map application provides a detailed view of the location of the buildings and the internal structure with the ability to switch floors. The application make it possible for the user to get more detailed information like where single rooms or printers are located. Especially, the computer rooms are highlighted and the opening hours as well as an estimated occupancy rate are displayed per request. This sort of application use case of Linked Open Data seem to be very popular and is also implemented among others at the University of Münster\footnote{\url{http://app.uni-muenster.de/Karte/}} and Oxford University\footnote{\url{https://data.ox.ac.uk/explore/science-area/}}.
+The University of Southampton has developed a map application\footnote{\url{http://maps.southampton.ac.uk/}} based on their Linked Open Data initiative (see figure \ref{fig:ush-map-app}). This map application provides a detailed view of the location of the buildings and the internal structure with the ability to switch floors. The application makes it possible for the user to get more detailed information like where single rooms or printers are located. Especially, the computer rooms are highlighted and the opening hours as well as an estimated occupancy rate are displayed per request. This sort of application use case of Linked Open Data seem to be very popular and is also implemented among others at the University of Münster\footnote{\url{http://app.uni-muenster.de/Karte/}} and Oxford University\footnote{\url{https://data.ox.ac.uk/explore/science-area/}}.
 
-The Vienna University of Technology has already published the location of the lecture rooms, seminar rooms and plans of the internal structure of the buildings in an open way, but not in a format, where the content can be interpreted by machines. Additional to this, there are other sources with valuable information for such a map. TUbarrierfrei manages knowledge about the accessibility of buildings and certain rooms, Fachschaft (student representatives) provides information about learning rooms and ZID about computer rooms. The project called LinkedGeoData\footnote{\url{http://linkedgeodata.org/About}} provides geographical information (e.g. cafés, restaurants and super markets that are nearby) as Linked Open Data. At the time of writing, these datasets cannot be interlinked and presented to the user in a map application.
+The Vienna University of Technology has already published the location of the lecture rooms, seminar rooms and plans of the internal structure of the buildings in an open way, but not in a format, where the content can be interpreted by machines. Additional to this, there are other sources with valuable information for such a map. TUbarrierfrei manages knowledge about the accessibility of buildings and certain rooms, Fachschaft (student representatives) provides information about learning rooms and ZID about computer rooms. The project called LinkedGeoData\footnote{\url{http://linkedgeodata.org/About}} provides geographical information (e.g. cafés, restaurants and super markets that are nearby) as Linked Open Data. At the time of writing, these datasets cannot be interlinked and presented to the user in a map a<pplication.
 
 \paragraph{Results:}
 All interviewees responded positively to this proposed application use case and would use such an application. Interviewee \textit{\textbf{E}} would like to have an overview of all scheduled events(exams, lectures, exercises) that take place in a certain room at a particular date. This idea corresponds to the demand of all other interviewees to find free rooms for particular tasks. \textit{\textbf{A}} and \textit{\textbf{D}} would like to have a service, where all free rooms that can potentially be used for meet-ups and learning like free lecture rooms are indicated on such a map. \textit{\textbf{B}} and \textit{\textbf{C}} would like to have a service to simplify the finding of free seminar rooms and rooms in general that can be used by tutors to mentor their students. Regarding the provision of information about the accessibility in such a map, \textit{\textbf{B}} mentioned that real-time data about disfunctional elevators may be quite useful. \textit{\textbf{C}} would also like to have an overview of the location of institutes. This idea corresponds to the science area application of the Oxford University\footnote{\url{https://data.ox.ac.uk/explore/science-area/}}. \textit{\textbf{E}} wanted to make the note that such a map application shall also work offline.
@@ -296,7 +296,7 @@ One essential part of the interview was the exploration of the interviewee's ide
 
 TISS already provides a calendar with the dates of all favoured courses, but the calendar is restricted to the lecture times exposed on TISS.
 
-\paragraph{Course information:} As mentioned above, the organizational information about courses may be separated over multiple sources. Firstly, there should be a possibility to present all available organizational information about a certain course to a student. Additionally, there are also internet forums and wikis operated from students that collect information (mostly experience) about certain courses. \textit{\textbf{D}} and \textit{\textbf{E}} wanted to have the ability to interlink the course information on TISS with other sources like VOWI (wiki operated from students). \textit{\textbf{D}} also would like to have the ability to filter courses by categories. For example, when a student is interested in artificial intelligence and (s)he want to get all courses of this field. 
+\paragraph{Course information:} As mentioned above, the organizational information about courses may be separated over multiple sources. Firstly, there should be a possibility to present all available organizational information about a certain course to a student. Additionally, there are also internet forums and wikis operated by students that collect information (mostly experience) about certain courses. \textit{\textbf{D}} and \textit{\textbf{E}} wanted to have the ability to interlink the course information on TISS with other sources like VOWI (wiki operated by students). \textit{\textbf{D}} also would like to have the ability to filter courses by categories. For example, when a student is interested in artificial intelligence and (s)he want to get all courses of this field. 
 
 \paragraph{Event calendar:} Same as with course information, the information about events that are going to take place at the university are separated over different sources in dependence on which organizational unit organizes the event. \textit{\textbf{D}} would like to have a calendar for all events. It shall be possible to filter the events by categories/organizational units. This idea is similar to the event calendar of the University of Southampton\footnote{\url{http://www.events.soton.ac.uk/}}. At the moment of writing, the events are often announced to the students per email, flyers or by word-of-mouth recommendations including social networks. It is likely to oversee events in which you are potentially interested in. \textit{\textbf{D}} would also like to have an event calendar that can be synchronized with the own calendar using the mentioned filter.
 
@@ -382,26 +382,33 @@ is the interaction of users with a developed application that makes use of LOD p
 \subsection{Proposal of a technical architecture}
 \label{technical-architecture-challenges:proposal}
 
+In order to overcome the environment of data silos and to support the evolvement of a university-wide data space for public resources, a technical architecture following Linked Data principles is proposed and discussed in this section. Berners-Lee suggested four principles for publishing data on the web, which can be considered as best practise. The compliance with this best practise leads to Linked Data; \enquote{the idea is that the more people follow these principles, the more their data will be usable by others.}\cite{simperl_using_2013}. The four principles stated by Berners-Lee (2006)\cite{berners-lee_linked_2006} are:
+\begin{enumerate}
+	\item Use URIs as names for things
+	\item Use HTTP URIs so that people can look up those names.
+	\item When someone looks up a URI, provide useful information, using the standards (RDF, RDFS, SPARQL)
+	\item Include links to other URIs. so that they can discover more things.
+\end{enumerate}
+Every thing mentioned in one or more datasets of the university shall be identified uniquely by an URI. The Audimax (main lecture hall) of the Vienna University of Technology with the room code \texttt{BAU176A} may for example be identified by \url{http://lod.tuwien.ac.at/room/BAU176A} and a visit of this HTTP location reveals all the known information about this room like capacity, event schedule, etc. in a machine-readable format. This can include links to the hosted events using the same approach with HTTP URIs identifying those events. In this case, the four principles would be fulfilled and a computer program can easily explore this machine-readable information following those links like a human following the links on web pages to gain further information. As mentioned above, following the principles leads to Linked Data. Linked Open Data extends Linked Data with the idea of publishing it in a open way.
+\begin{quote} Open means anyone can freely access, use, modify, and share for any purpose (subject, at most, to requirements that preserve provenance and openness).\cite{_open_????}\end{quote}
+
+In order to transform demanded datasets of the university into Linked Data and publish it in an open way, a system architecture is required that faces the issues of diverging data sources and data freshness.\enquote{An important architectural pattern used in system development is the multitier architecture. It logically separates the functionality of the system in a number of layers and specifies the communication between those layers.}\cite{simperl_using_2013}. The proposed architecture (see figure \ref{fig:tac-high-level-architecture}) is composed of four tiers. The first tier represents the diverging forms of \textbf{\textit{data sources}} that can occur in an information environment at a university (see \ref{technical-architecture-challenges:proposal:data-source}). The second tier shows the \textbf{\textit{integration}} of such data sources into a central data storage for linked data also called triple store (see \ref{technical-architecture-challenges:proposal:integration}). The third tier shows the \textbf{\textit{provision}} of the stored linked data (see \ref{technical-architecture-challenges:proposal:provision}) so that developers can implement \textbf{\textit{applications}} based on it represented in the fourth tier . 
+
 \begin{figure}[t]
 \centering \includegraphics*[width=1.0\columnwidth]{images/technical-architecture/lod_technical_architecture.png}
 \caption{High level architecture for providing Linked Open Data (adapted from EUCLID {\cite{simperl_using_2013}})}
 \label{fig:tac-high-level-architecture}
 \end{figure}
 
-In order to overcome the environment of data silos and to support the evolvement of a university-wide data space for public resources, a technical architecture following Linked Data principles is proposed and discussed in this section. Students of a university are usually on the consuming side of information systems. However, there are students that are operating information systems like wikis and internet forums. Furthermore, some course teams have their own web pages, where detailed information about the course is provided. In earlier studies of Linked Data applied to the domain of universities little attention has been paid to this issue. The proposed technical architecture in contrast suggests a solution.
-
-The technical architecture is composed of three tiers. The first tier represents the diverging forms of \textbf{\textit{data sources}} that can occur in an information environment at a university (see \ref{technical-architecture-challenges:proposal:data-source}). The second tier shows the \textbf{\textit{integration}} of such data sources into a central data storage for linked data also called triple store (see \ref{technical-architecture-challenges:proposal:integration}). The third tier shows the \textbf{\textit{provision}} of the stored linked data so that developers can implement application based on it (see \ref{technical-architecture-challenges:proposal:provision}). 
-
 \subsubsection{Data sources}
-As mentioned earlier, the information environment of a university may consist of multiple independent services that evolved over time powered by data sources that do not met the principles of Linked Data like relational databases.  Nevertheless, there are techniques to integrate these diverging data sources into a Linked Data environment without reconstructing legacy services and work-flows, which is described in the \textbf{\textit{integration}} tier. In this section, the different forms of data sources that may occur in the information environment of a university are listed and described.
-
 \label{technical-architecture-challenges:proposal:data-source}
+As mentioned earlier, the information environment of a university may consist of multiple independent services that evolved over time powered by data sources that do not met the principles of Linked Data like relational databases.  Nevertheless, there are techniques to integrate these diverging data sources into a Linked Data environment without reconstructing legacy services and work-flows, which is described in the \textbf{\textit{integration}} tier. In this section, the different forms of data sources that may occur in the information environment of a university are listed and described.
 
 \paragraph{Not machine-processable:} Not machine-processable sources of knowledge like the expertise of a human (e.g. which rooms are in which way accessible) or digital data that is hard to interpret (e.g. images, PDF files) have to be transformed by a human into data formats that can be processed and interpreted by computers in order to be managed by the proposed technical architecture.
 
 \paragraph{Semi-structured files} 
 
-\subparagraph{Relational databases}
+\paragraph{Relational databases:} 
 
 \subparagraph{Web APIs} are one way to publish the underlying data of a service in a structured format so that it can be processed by applications. It is common to provide results in formats such as XML and JSON. At the Vienna University of Technology, the central information system TISS has a RESTful API, which gives access to some data like course information or the address book.
 
@@ -419,7 +426,9 @@ According to the star rating system of Tim Berners-Lee, Web APIs achieve a ratin
 
 \subsubsection{Provision}
 \label{technical-architecture-challenges:proposal:provision}
-...
+In the first two layers, the demanded and available datasets are transformed into Linked Data and integrated into a local storage named triple store.
+
+
 
 \subsection{Challenges}
 \label{technical-architecture-challenges:challenges}
